@@ -2,8 +2,8 @@ EXTRA_DIST = \
 	betaradio.png \
 	betaradio.desktop.in
 
-icondir = $(datadir)/pixmaps
-icon_DATA = betaradio.png betaradio-on.png
+icondir = $(datadir)/pixmaps/betaradio
+icon_DATA = betaradio.png radio-on.png radio-off.png
 
 desktopdir = $(datadir)/applications
 desktop_DATA = betaradio.desktop
