@@ -1,4 +1,4 @@
 bin_PROGRAMS = betaradio
 betaradio_SOURCES = betaradio.c eggtrayicon.c channel.c gstplay.c gstplay.h channel.h eggtrayicon.h sitelist.h 
-AM_CFLAGS = @gtk2_CFLAGS@ @curl_CFLAGS@ @gst_CFLAGS@ -DEGG_COMPILATION
+AM_CFLAGS = @gtk2_CFLAGS@ @curl_CFLAGS@ @gst_CFLAGS@ -DEGG_COMPILATION -DDATADIR=\"$(datadir)\"
 AM_LDFLAGS = @gtk2_LIBS@ @curl_LIBS@ @gst_LIBS@
